--- a/docs/개발진행사항_버전관리.md
+++ b/docs/개발진행사항_버전관리.md
@@ -42,11 +42,21 @@ Z:\ADC_WEB\
 - [x] intranet PHP 기본 설정
 - [x] 문서관리 시스템 구축
 
+### v1.1.0 (2024-10-19)
+- [x] Python FastAPI 백엔드 시스템 구축
+- [x] PostgreSQL 데이터베이스 연동
+- [x] SQLAlchemy ORM 설정
+- [x] Git 버전관리 시스템 구축
+- [x] ISP 디자인 참고한 홈페이지 디자인
+- [x] 히어로 섹션 배경 이미지 최적화
+- [x] 모바일 반응형 디자인 구현
+- [x] 헤더와 히어로 섹션 갭 제거
+- [x] 모바일 메뉴 토글 기능 구현
+
 ### 현재 진행중
-- [ ] homepage 디자인 완성
-- [ ] intranet 기능 개발
-- [ ] 반응형 웹 디자인 적용
+- [ ] 인트라넷 시스템 개발
 - [ ] SEO 최적화
+- [ ] 성능 최적화
 
 ### 향후 계획
 - [ ] 사용자 인증 시스템
@@ -70,6 +80,7 @@ Z:\ADC_WEB\
 | 날짜 | 버전 | 변경사항 | 담당자 |
 |------|------|----------|--------|
 | 2024-10-19 | v1.0.0 | 프로젝트 초기 설정 | 개발팀 |
+| 2024-10-19 | v1.1.0 | Python 백엔드 구축, 홈페이지 디자인 완성, 모바일 반응형 구현 | 개발팀 |
 
 ## 주의사항
 - 모든 변경사항은 문서에 기록
